classDiagram
    class Project {
        -Long id
        -String name
        -String description
        -Date startDate
        -Date endDate
        -ProjectStatus status
        -Integer totalTasks
        -Integer completedTasks
    }

    class Task {
        -Long id
        -String title
        -String description
        -Priority priority
        -TaskStatus status
        -Date startDate
        -Date dueDate
        -String projectId;
        -Date createdAt
        -Date updatedAt;
        -String createdBy;
    }

    class User {
        -Long id
        -String name
        -String password
        -String email
        -UserRole role
        -boolean active
    }

    class Team {
        -Long id
        -String name
    }

    class Comment {
        -Long id
        -String content
        -Date createdAt
        -Date updatedAt;
        -String authorId;
        -String entityId;
        -String entityType;
        -Long parentCommentId;
        -boolean isEdited
    }

    class Notification {
        -Long id
        -String recipientId;
        -NotificationType type
        -String content
        -String entityId;
        -EntityType entityType;
        -boolean isRead;
        -LocalDateTime readAt;
        -Date createdAt
    }

    Project "1" -- "*" Task
    Project "*" -- "*" User : "Member"
    Task "*" -- "1" User
    Team "1" *-- "*" User
    Comment "*" -- "1" User
    Comment "*" -- "0..1" Project
    Comment "*" -- "0..1" Task
    Notification "*" -- "1" User